--- a/ispconfig3_autoselect/config/config.inc.php.dist
+++ b/ispconfig3_autoselect/config/config.inc.php.dist
@@ -1,5 +1,4 @@
 <?php
-$rcmail_config['remote_soap_user'] = 'roundcube';
-$rcmail_config['remote_soap_pass'] = 'roundcube';
-$rcmail_config['soap_url'] = 'http://192.177.167.44:8080/remote/';
+//Can be tls:// or ssl://
+$rcmail_config['autoselect_con_type'] = '';
 ?>
